# BlueOS

.github/workflows/: block-ai-commits.yml
core/: Dockerfile  pyproject.toml  start-blueos-core
core/compose/: compose.yml
core/frontend/: vite.config.js
core/frontend/src/store/: autopilot.ts  autopilot_manager.ts  popups.ts
core/frontend/src/types/: parameter_repository.d.ts
core/frontend/src/utils/: major_tom.ts  pull_tracker.ts
core/frontend/src/views/: SettingsView.vue
core/libs/filebrowser/: README.md  pyproject.toml
core/services/ardupilot_manager/: autopilot_manager.py
core/services/ardupilot_manager/mavlink_proxy/: MAVLinkServer.py
core/services/beacon/: main.py  settings.py
core/services/bridget/: bridget.py
core/services/cable_guy/: ip_wrapper.py  main.py  networksetup.py
core/services/cable_guy/api/: manager.py
core/services/commander/: dump_host_logs.py  main.py  pyproject.toml
core/services/kraken/: config.py  kraken.py  pyproject.toml  settings.py
core/services/kraken/extension/: extension.py
core/services/kraken/jobs/: exceptions.py  jobs.py  models.py  (+1 more)
core/services/ping/: ping1d_driver.py
core/services/versionchooser/: config.py  docker_login.py  main.py  pyproject.toml
core/services/versionchooser/api/: app.py  models.py
core/services/versionchooser/api/v1/routers/: __init__.py  index.py
core/services/wifi/: settings.py
core/services/wizard/: args.py  config.py  main.py  setup.py
core/tools/linux2rest/: bootstrap.sh
core/tools/mavlink2rest/: bootstrap.sh
core/tools/mavlink_camera_manager/: bootstrap.sh
(+27 files in other folders)
